--- a/resume.css
+++ b/resume.css
@@ -1,6 +1,7 @@
 @import url(http://fonts.googleapis.com/css?family=Merriweather+Sans:400,700,800,300);
 @import url(http://fonts.googleapis.com/css?family=Oswald:300,400);
 @import url(http://fonts.googleapis.com/css?family=PT+Sans:300,400,700);
+@import url(http://fonts.googleapis.com/css?family=PT+Sans+Caption:400,700);
 
 
 .float_left {
@@ -16,13 +17,17 @@
 body {
     font-family: 'PT Sans', sans-serif;
     background: #ddd;
+    font-size: 11pt;
 }
-* { padding: 0; margin: 0; }
+
+* {
+    padding: 0;
+    margin: 0;
+}
 
 #might_as_well_be_body {
-    width: 680px;
+    width: 720px;
     margin: 0 auto;
-    font-size: 11pt;
     box-shadow: 0px 0px 12px #aaa;
     border: 1px solid #aaa;
     border-top: none;
@@ -46,19 +51,16 @@ body {
     background: linear-gradient(to top, #f0f0f0 0%,#ffffff 25%);
 }
 */
-.section .header {
-    font-weight: 700;
-    font-size: 16pt;
-    font-family: 'PT Sans', sans-serif;
+#main .section > .header {
+    font-weight: bold;
+    font-size: 18pt;
     /* text-align: center; */
     padding-bottom: 2px;
     margin-bottom: 5px;
     border-bottom: 1px solid #666;
 }
-.section .subheader {
-    font-size: 14pt;
-    font-weight: 400;
-    font-family: 'PT Sans', sans-serif;
+#main .section .subheader {
+    font-size: 16pt;
 }
 
 
@@ -67,10 +69,18 @@ body {
     letter-spacing: 1pt;
     font-size: 20pt;
 
-    font-family: 'PT Sans', sans-serif;
     font-weight: 700;
     text-align: center;
     text-transform: uppercase;
+}
+
+.dramatic {
+    font-style: italic;
+    color: #444;
+}
+
+.experience_entry .prose {
+    font-size: 10pt;
 }
 
 #date {
@@ -90,6 +100,7 @@ body {
 #sidebar {
     width: 22%;
     margin: 0 25px 0 25px;
+    text-align: center;
 }
 /* if your browser doesn't support calc() i probably
    dont wan't to work for you */
@@ -97,17 +108,29 @@ body {
     width: calc(78% - 50px);
 }
 
-#sidebar {
-    text-align: center;
-}
-#objective {
-    font-size: 10pt;
-}
-
+/* Things in sidebar */
 #sidebar #title {
     font-style: italic;
     color: #444;
 }
 #sidebar > * {
     margin-bottom: 10px;
+}
+
+#sidebar .section > .header {
+    font-weight: 700;
+    font-size: 9pt;
+    text-transform: uppercase;
+}
+
+.bubbly {
+    /* orange: #FF9900; blue: #146EB4 */
+    /*background: linear-gradient(to bottom, #ff9900 0%,#ffffff 90%);*/
+    padding: 0 3px 1px 3px;
+    border-radius:3px;
+    margin-top: 5px;
+}
+.amazon {
+    background-color: #aaa;
+    color: #fff;
 }
