--- a/resume.css
+++ b/resume.css
@@ -25,7 +25,8 @@ body {
     margin: 0;
 }
 
-#might_as_well_be_body {
+@media screen {
+    #might_as_well_be_body {
     width: 720px;
     margin: 0 auto;
     box-shadow: 0px 0px 12px #aaa;
@@ -34,6 +35,7 @@ body {
     background-color: #fff;
     margin-top: 10px; /* perhaps a bit too playful */
     padding: 50px 20px 50px 20px;
+}
 }
 
 /* Section stuff */
