--- a/resume.css
+++ b/resume.css
@@ -40,43 +40,14 @@ a:hover {
     text-decoration: underline;
 }
 
-@media screen {
-    #might_as_well_be_body {
-        width: 720px;
-        margin: 0 auto;
-        box-shadow: 0px 0px 12px #aaa;
-        border: 1px solid #aaa;
-        background-color: #fff;
-        margin-top: 10px; /* perhaps a bit too playful */
-        padding: 50px 20px 50px 20px;
-    }
-}
-
-/* it looks meh on iphone */
-@media only screen and (max-device-width: 480px) {
-    body {
-        max-width: 100%;
-    }
-    #might_as_well_be_body {
-        width: 460px;
-    }
-    #sidebar {
-       width: 100%;
-       margin: 0;
-       -moz-column-count:3;
-       -webkit-column-count:3;
-       column-count:3;
-   } 
-}
-
 #sidebar {
     width: 25%;
     margin: 0 25px 0 25px;
     text-align: center;
 }
 
-/* if your browser doesn't support calc() I probably dont wan't to work for you */
 #main {
+    width: 460px; /* if your browser doesn't support calc() I probably dont wan't to work for you */
     width: calc(75% - 75px);
     margin-right: 25px;
 }
@@ -171,5 +142,41 @@ a:hover {
 
 #sidebar ul {
     list-style-type: none;
+}
+
+@media screen {
+    #might_as_well_be_body {
+        width: 720px;
+        margin: 0 auto;
+        box-shadow: 0px 0px 12px #aaa;
+        border: 1px solid #aaa;
+        background-color: #fff;
+        margin-top: 10px; /* perhaps a bit too playful */
+        padding: 50px 20px 50px 20px;
+    }
+}
+
+/* it looks meh on iphone */
+@media only screen and (max-width: 480px) {
+    body {
+        max-width: 100%;
+    }
+    #might_as_well_be_body {
+        padding: 5px;
+        margin: 0;
+        width: 470px;
+    }
+    #sidebar {
+       width: 100%;
+       margin: 0;
+       -moz-column-count:3;
+       -webkit-column-count:3;
+       column-count:3;
+   } 
+   #main {
+       width: 460px;
+       margin: 0 auto;
+       margin-top: 20px;
+   }
 }
 
